Search Results: search box alignment issue fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2272,7 +2272,7 @@ p.about-text {
 
 .header-search-tab2 {
   width: 645px;
-  height: 174px;
+  height: 182px;
   margin-bottom: 30px;
   background-color: #F5F5F5
 }
